# zephyr

boards/arm/efr32mg_sltb004a/: CMakeLists.txt  board.c  board.h
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.stm32  adc_stm32.c  adc_stm32.h
drivers/ieee802154/: ieee802154_efr32.c
drivers/sensor/: CMakeLists.txt  Kconfig
dts/arm/st/f4/: stm32f4-pinctrl.dtsi
dts/arm/st/l0/: stm32l0.dtsi
ext/lib/radio/: CMakeLists.txt
soc/arm/st_stm32/stm32l0/: Kconfig.series
